--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -298,8 +298,10 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Services\AdminService.cs" />
     <Compile Include="Services\AtomeInfo.cs" />
     <Compile Include="Services\AtomeService.cs" />
+    <Compile Include="Services\CssVariableInfo.cs" />
     <Compile Include="Services\IAtomeInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -444,6 +446,12 @@
     <Content Include="NeatUpload\NeatUpload.js" />
     <Content Include="NeatUpload\Progress.aspx" />
     <Content Include="NeatUpload\Progress.js" />
+    <Content Include="admin\App_LocalResources\Default.aspx.fr.resx">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="admin\App_LocalResources\Default.aspx.resx">
+      <SubType>Designer</SubType>
+    </Content>
     <EmbeddedResource Include="atomes\photo\Services\Messages.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Messages.Designer.cs</LastGenOutput>
