--- a/trunk/Molecule.WebSite/Web.config
+++ b/trunk/Molecule.WebSite/Web.config
@@ -90,7 +90,7 @@
 			<add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false"/>
-      <add verb="*" path="*.css" type="Molecule.WebSite.CssHandler" validate="false"/>
+      <add verb="*" path="*molecule.css" type="Molecule.WebSite.CssHandler" validate="false"/>
       <add verb="*" path="*.media" type="WebMusic.MediaFileHandler" validate="false"/>
 			<add verb="*" path="~/atomes/webmusic/CoverArt/*.jpg" type="WebMusic.CoverArt.CoverArtFileHandler" validate="false"/>
 			<!--<add verb="*" path="~/images/*.*" type="Molecule.WebSite.ImageHandler" validate="false"/>-->
