--- a/trunk/WebPhoto/WebPhoto.Providers.Fspot/WebPhoto.Providers.Fspot.csproj
+++ b/trunk/WebPhoto/WebPhoto.Providers.Fspot/WebPhoto.Providers.Fspot.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{72D247CB-1535-412A-B20C-38A6C898341A}</ProjectGuid>
+    <ProjectGuid>{F5209A18-9A63-4E68-B270-650B90BCA424}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WebPhoto.Providers.Stub</RootNamespace>
@@ -42,6 +42,10 @@
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Mono.Data.Sqlite, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\references\Mono.Data.Sqlite.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Rocks, Version=0.1.0.0, Culture=neutral, PublicKeyToken=null">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\references\Mono.Rocks.dll</HintPath>
@@ -63,7 +67,6 @@
       <HintPath>..\..\references\log4net.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="Mono.Data.Sqlite" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PhotoLibraryProvider.cs" />
