--- a/trunk/Molecule/Molecule.csproj
+++ b/trunk/Molecule/Molecule.csproj
@@ -84,6 +84,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Atome\AtomeProviderBase.cs" />
+    <Compile Include="Atome\IProvider.cs" />
+    <Compile Include="Atome\ProviderException.cs" />
+    <Compile Include="Atome\ProviderInfo.cs" />
     <Compile Include="Collections\Dictionary.cs" />
     <Compile Include="Collections\IKeyedEnumerable.cs" />
     <Compile Include="Configuration\ConfigurationClient.cs" />
@@ -95,6 +99,11 @@
     <Compile Include="Drawing\BitmapExtensions.cs" />
     <Compile Include="IO\Extensions.cs" />
     <Compile Include="IO\XdgBaseDirectorySpec.cs" />
+    <Compile Include="Messages.Designer.cs">
+      <DependentUpon>Messages.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\Plugin.cs" />
     <Compile Include="Runtime\PluginAttribute.cs" />
@@ -123,5 +132,10 @@
   -->
   <ItemGroup>
     <EmbeddedResource Include="InitDb.sql" />
+    <EmbeddedResource Include="Messages.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Messages.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
