--- a/trunk/Molecule.WebSite/Web.config
+++ b/trunk/Molecule.WebSite/Web.config
@@ -98,7 +98,8 @@
 		<httpModules>
 			<add name="UploadHttpModule" type="Brettle.Web.NeatUpload.UploadHttpModule, Brettle.Web.NeatUpload"/>
 			<add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-		</httpModules>
+      <add name="AtomeAccessModule" type="Molecule.WebSite.AtomeAccessModule" />
+    </httpModules>
 	</system.web>
 	<system.codedom>
 		<compilers>
