--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{99FF5204-4E9F-4B34-9185-72BF089FC4BD}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
@@ -423,6 +423,7 @@
     <Content Include="atomes\photo\admin\Default.aspx" />
     <Content Include="atomes\photo\Atome.xml" />
     <Content Include="atomes\photo\bin\providers\Mono.Data.Sqlite.dll" />
+    <Content Include="atomes\photo\bin\providers\WebPhoto.Providers.FS.dll" />
     <Content Include="atomes\photo\bin\providers\WebPhoto.Providers.Fspot.dll" />
     <Content Include="atomes\photo\bin\providers\WebPhoto.Providers.Stub.dll" />
     <Content Include="atomes\photo\FullSizePhoto.ascx" />
@@ -507,9 +508,6 @@
           <IISUrl>
           </IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
-          <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl>
-          </CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
