--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{99FF5204-4E9F-4B34-9185-72BF089FC4BD}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
@@ -157,6 +157,13 @@
     </Compile>
     <Compile Include="atomes\photo\PhotoLink.ascx.designer.cs">
       <DependentUpon>PhotoLink.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="atomes\photo\RawPhoto.ascx.cs">
+      <DependentUpon>RawPhoto.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="atomes\photo\RawPhoto.ascx.designer.cs">
+      <DependentUpon>RawPhoto.ascx</DependentUpon>
     </Compile>
     <Compile Include="atomes\photo\Services\AdminService.cs" />
     <Compile Include="atomes\photo\Services\PhotoLibrary.cs" />
@@ -441,6 +448,7 @@
     <Content Include="atomes\photo\MonthCalendar.aspx" />
     <Content Include="atomes\photo\Default.aspx" />
     <Content Include="atomes\photo\PhotoLink.ascx" />
+    <Content Include="atomes\photo\RawPhoto.ascx" />
     <Content Include="atomes\photo\scripts\osm.js" />
     <Content Include="atomes\photo\stublibrary\photo0.jpg" />
     <Content Include="atomes\photo\style\calendar.css" />
@@ -494,6 +502,16 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="atomes\photo\App_LocalResources\RawPhoto.ascx.fr.resx">
+      <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="atomes\photo\App_LocalResources\RawPhoto.ascx.resx">
+      <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <Folder Include="App_Themes\raw\" />
     <Folder Include="atomes\webmusic\bin\providers\" />
     <Folder Include="images\" />
@@ -518,9 +536,6 @@
           <IISUrl>
           </IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
-          <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl>
-          </CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
